# Read-News-For-Me

./: .env.example  .gitignore  Claude.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
src/news_analyzer/: __init__.py  api.py  crew.py  main.py
src/news_analyzer/config/: agents.yaml  tasks.yaml
src/news_analyzer/tools/: __init__.py
